--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"axios": "^0.23.0",
 		"bcrypt": "^5.0.1",
+		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.15.2",
 		"chai": "^4.2.0",
 		"chai-http": "^3.0.0",
@@ -17,7 +19,8 @@
 		"helmet": "^3.1.0",
 		"mocha": "^3.2.0",
 		"mongodb": "^4.1.3",
-		"mongoose": "^6.0.11"
+		"mongoose": "^6.0.11",
+		"node-pre-gyp": "^0.17.0"
 	},
 	"repository": {
 		"type": "git",
